--- a/views/index.ejs
+++ b/views/index.ejs
@@ -55,7 +55,8 @@
 			hiddentInput.setAttribute('value', token.id);
 			form.appendChild(hiddentInput);
 
-			form.submit();
+			console.log(token.id);
+			//form.submit();
 		}
 	</script>
 </html>
