3D Secure Auth (CHECK DESC)
To test just go to /intent and use the 3D secure test cards found here https://stripe.com/docs/testing#regulatory-cards

--- a/views/intent.ejs
+++ b/views/intent.ejs
@@ -53,9 +53,14 @@
                 payment_method: {card: cardElement}
             });
 
-            const {paymentIntent} = confirmPayment;
+            const {paymentIntent, error} = confirmPayment;
 
-            alert(paymentIntent.status);
+			if(error) {
+				alert(`${error.code} : ${error.message}`);
+			} else {
+				alert(paymentIntent.status);
+			}
+            
 		})
 
 		function addToken(token) {
