--- a/views/intent.ejs
+++ b/views/intent.ejs
@@ -7,7 +7,7 @@
 		<form id="payment-form" action="charge">
 		  <div>
 		    <label>Name</label>
-		    <input class="my-input">
+		    <input class="my-input" id="inptest">
 		  </div>
 		  <div>
 		    <label>Card</label>
@@ -37,11 +37,14 @@
 
 		form.addEventListener('submit', async function(event) {
 			event.preventDefault();
+
+			let inp = document.querySelector('#inptest');
             const response = await fetch('http://localhost:4000/pay', {
-                method: 'GET',
+                method: 'POST',
                 headers: {
                     'Content-Type' : 'application/json'
-                }
+                },
+				body: JSON.stringify({name: inp.value})
             });
 
             let data = await response.json();
