--- a/views/intentnew.ejs
+++ b/views/intentnew.ejs
@@ -18,21 +18,16 @@
 	<script defer>
 		var stripe = Stripe('<%= pubKey %>');
 		let elements;
+		let paymentElement;
 
 		(async () => {
-		  const response = await fetch('/secret');
-		  const data = await response.json();
 
-		  const options = {
-		  	clientSecret: data.clientSecret
-			// appearance: {},
-			};
 
 			// Set up Stripe.js and Elements to use in checkout form, passing the client secret obtained in step 3
-			elements = stripe.elements(options);
+			elements = stripe.elements();
 
 			// Create and mount the Payment Element
-			const paymentElement = elements.create('payment');
+			paymentElement = elements.create('card');
 			paymentElement.mount('#payment-element');
 		})();
 
@@ -41,12 +36,27 @@
 		form.addEventListener('submit', async (event) => {
 		  event.preventDefault();
 
-		  const {error} = await stripe.confirmPayment({
-		    elements,
-		    confirmParams: {
-		      return_url: 'https://localhost:4000/order/123/complete',
-		    },
-		  });
+		  const response = await fetch('/secret');
+		  const data = await response.json();
+
+		  	let {paymentIntent, error} = await stripe.confirmCardPayment(
+				data.clientSecret,
+				{
+					payment_method: {
+						card: paymentElement
+					}
+				}
+			);
+
+			console.log(paymentIntent);
+
+
+		//   const {error} = await stripe.confirmPayment({
+		//     elements,
+		//     confirmParams: {
+		//       return_url: 'https://localhost:4000/order/123/complete',
+		//     },
+		//   });
 
 		  if (error) {
 		    const messageContainer = document.querySelector('#error-message');
