Apple & Google Pay

--- a/views/intentnew.ejs
+++ b/views/intentnew.ejs
@@ -28,6 +28,8 @@
 
 			// Create and mount the Payment Element
 			paymentElement = elements.create('card');
+			console.log("paymentElement");
+			console.log(paymentElement);
 			paymentElement.mount('#payment-element');
 		})();
 
